Spacing issues fixed

--- a/public/static/css/vv-style.css
+++ b/public/static/css/vv-style.css
@@ -71,8 +71,8 @@ body{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(
-        rgba(0, 66, 118, 1) 17%,
-        rgba(0, 140, 247, 1) 85%
+        rgba(0, 140, 247, 1) 17%,
+        rgba(0, 66, 118, 1) 95%
     );
 }
 
@@ -83,8 +83,8 @@ body{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-image: linear-gradient(
-        rgba(0, 66, 118, 1) 17%,
-        rgba(0, 140, 247, 1) 85%
+            rgba(0, 140, 247, 1) 17%,
+            rgba(0, 66, 118, 1) 100%
     );
 }
 
